fix: jdk8-compatible env parsing in judge thread pool